@@ -18,6 +18,7 @@ psp-hacks.com
 ultimakillz
 Rossen
 MrShawman
+JJS
 
 Special thanks to: all people who worked on PSPSDK, specially Tyranid for psplink and prxtool, people at ps2dev.org, jas0nuk for prxdecrypter, 
 all psardumper developers.
